# B3kadai_2026

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
1.Q-learning/: Q_learning.py  README.md  main.py
2.1_Duel-Double-DQN/: DQN.py  main.py
2.2_Noisy-Duel-DDQN-Atari/: Agent.py  main.py
2.3 Prioritized-Experience-Replay-DDQN-DQN/LightPriorDQN_gym0.2x/: main.py
2.3 Prioritized-Experience-Replay-DDQN-DQN/LightPriorDQN_gym0.2x/model/: DDQN_CPV1_100.pth  DDQN_CPV1_50.pth
experiments/: README.md  compare.py
experiments/configs/: atari_compare_dqn_per_3games.json  atari_compare_dqn_per_3games.yaml  atari_compare_dqn_per_breakout.yaml  atari_eval_only.yaml  cartpole_compare_dqn3.json  cartpole_compare_dqn3.yaml  cartpole_eval_only.yaml
experiments/notebooks/: plot_metrics.ipynb
